CLEAN UP --------------------------------------------------------------------------------------------- REMOVED:  unused code, warning, errors, reformated my code ----------------------------------------------------------------------------------------------